--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_speed_dial
+name: flutter_speed_dial_quickaction
 description: Flutter plugin to implement a beautiful and dynamic Material Design Speed Dial, with labels, animated icons and hide on scrolling.
 version: 1.2.8
 author: Dario Ielardi <dario.ielardi@gmail.com>, Julius Piso <julius@piso.at>
